--- a/style.css
+++ b/style.css
@@ -111,23 +111,33 @@ th {
 }
 
 .search-bar {
-    border: 2px solid #d470a2;
-    margin-top: none;
-    list-style-type: none;
-    text-align: center;
-    position: absolute;
     display: flex;
     justify-content: center;
-    top: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 0;
+    margin: 50px auto;
+    width: 100%;
+}
+
+.search-bar input {
+    width: 60%;
+    max-width: 500px;
+    padding: 10px 15px;
+    border: 2px solid #d470a2;
+    border-radius: 25px;
+    font-size: 16px;
+    outline: none;
+    transition: 0.3s;
+}
+
+.search-bar input:focus {
+    border-color: #b95d8a;
+    box-shadow: 0 0 8px rgba(180, 70, 120, 0.5);
+}
+
+.search-bar input::placeholder {
+    color: #999;
 }
 
 .coursepage-content {
     position: static;
 }
 
-#courses {
-    margin-top: 130px;
-}
